<resources>
    <string name="app_name">Lat2_AKB12_10116515RidwanMaulana</string>
    <string name="logo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="cn">Connect to Facebook</string>
    <string name="dh">doesnt have account?</string>
    <string name="re">Register</string>
    <string name="headf">TODO</string>
    <string name="heaa">TODO</string>
    <string name="h">h</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="repass">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="alamat">Home Address</string>
    <string name="dodo">do</string>
    <string name="agre">Agree with Terms and Conditions</string>
    <string name="loc">Default Location</string>
    <string name="mek">TODO</string>


    <string-array name="tipedarah">
        <item>Blood Type</item>>
        <item>A</item>>
        <item>B</item>>
        <item>C</item>>
        <item>D</item>>
    </string-array>
    >
    <string-array name="res">
        <item>Reshus</item>>

    </string-array>
    >
    <string-array name="job">
        <item>Job</item>

    </string-array>
    <string name="title_activity_almost">Almost</string>
    <string name="almost_there">Almost There</string>
    <string name="verify">verify</string>
    <string name="thank_you_registering_with_one_more_step_you_need_to_check_your_email_to_active_your_account">Thank you registering with One more step you need to check your email to active your account</string>
    <string name="title_activity_verify">verify</string>
    <string name="verr">Verify Yout Account</string>
    <string name="enter_verification_code_here">enter verification code here...</string>
    <string name="sendd">Send</string>
    <string name="doo">doesn\'t the code? Resend</string>
    <string name="loz">We have send verification code to your email</string>
    <string name="my_image_circle">My Image Circle</string>
    <string name="mee">TODO</string>
    <string name="rerrrr">TODO</string>
    <string name="reterte">TODO</string>
    <string name="rid">Ridwan Maulana</string>
    <string name="bl">Blood type : O</string>
    <string name="tl">75</string>
    <string name="sr">100</string>
    <string name="ttp">330</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_receive">BLOOD RECEIVE</string>
    <string name="thanks">THANKS</string>
    <string name="sd">Search Donor</string>
    <string name="bn">Blood Needed</string>
    <string name="ms">Message</string>
    <string name="dy">Donor History</string>
    <string name="keterangan_search">Search donor near you</string>
    <string name="keterangan_need">4 user need blood</string>
    <string name="keterangan_message">5 New Message</string>
    <string name="keterangan_history">5 Gives , 2 Received</string>


</resources>


