<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43b3e6"
    android:orientation="vertical"
    tools:context=".Verf">

    <TextView
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verr"
        android:layout_marginTop="140dp"
        android:textSize="30sp"
        android:layout_gravity="center|center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:text="@string/loz"
        android:textColor="#ffffff"
        android:textSize="11sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#43b3e6"
        android:gravity="center"
        android:hint="@string/enter_verification_code_here"
        android:importantForAutofill="no"
        android:inputType=""
        android:textColor="#ffffff"


        android:textColorHint="#ffffff"
        android:textSize="14sp"
        tools:targetApi="o" />
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:background="#ffffff"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="374dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_custom"
        android:text="@string/sendd"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tvresen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="20dp"
        android:text="@string/doo"
        android:textColor="#ffffff"
        android:textSize="14sp"


        />

</LinearLayout>