<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43b3e6"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="257dp"
        android:layout_height="129dp"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="122dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_welcome_logo" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="284dp"
        android:layout_height="375dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:backgroundTint="#ffffff"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="237dp"
            android:ems="10"
            android:backgroundTint="#ffffff"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/button_custom"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/txtor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_login"
            android:layout_centerInParent="true"
            android:layout_marginBottom="-98dp"
            android:text="@string/or"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="55dp"
            android:background="@drawable/button_custom"
            android:text="@string/cn"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/txthv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_login"
            android:layout_centerVertical="true"
            android:layout_marginEnd="-40dp"
            android:layout_marginBottom="-208dp"
            android:layout_toStartOf="@+id/txtor"
            android:fontFamily="sans-serif-light"
            android:text="@string/dh"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/txre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_login"
            android:layout_centerVertical="true"
            android:layout_marginEnd="-97dp"
            android:layout_marginBottom="-208dp"
            android:layout_toStartOf="@+id/txtor"
            android:fontFamily="sans-serif-light"
            android:text="@string/re"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>