<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".Register">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/ic_header"
        android:theme="@style/AppTheme"
        android:elevation="4dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_header_back"
            android:id="@+id/kembali"
            android:contentDescription="@string/mek" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:textColor="#ffffff"


            />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:id="@+id/as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:hint="@string/username"
                android:importantForAutofill="no"

                android:inputType="textPersonName"
                tools:targetApi="o" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:hint="@string/email"
                android:importantForAutofill="no"

                android:inputType="textPassword"
                tools:targetApi="o" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:hint="@string/phone"
                android:importantForAutofill="no"

                android:inputType="number" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radiogr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Male"
                    android:textColor="@color/home" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginLeft="120dp"
                    android:text="@string/female"
                    android:textColor="@color/home" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"

                android:layout_marginRight="100dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/tipe_darah"
                    android:layout_width="150dp"
                    android:layout_height="40dp"

                    android:layout_marginLeft="20dp"

                    android:entries="@array/tipedarah" />

                <Spinner
                    android:id="@+id/planets_spinner"
                    android:layout_width="120dp"

                    android:layout_height="40dp"

                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="40dp"
                    android:entries="@array/res" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:hint="@string/repass"
                android:inputType="textPassword"

                />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/orga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/personal"
                    android:textColor="@color/home" />

                <RadioButton
                    android:id="@+id/Origanization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="90dp"
                    android:text="@string/organization"
                    android:textColor="@color/home" />

            </RadioGroup>

            <Spinner
                android:id="@+id/job"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"


                android:entries="@array/job" />

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="visible" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"

                android:hint="@string/alamat"
                android:importantForAutofill="no"

                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="375dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/loc"
                        android:importantForAutofill="no"

                        android:inputType="text"
                        tools:targetApi="o"></EditText>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/dodo"
                        android:src="@drawable/ic_blood_needed_location" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="20dp"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkbox_meat"
                android:layout_width="295dp"
                android:layout_height="23dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:shadowColor="#000"
                android:text="@string/agre"
                android:textColor="@color/home"
                android:textColorHighlight="@color/hitam"
                android:textColorLink="@color/hitam" />

            <Button
                android:id="@+id/btn_regiss"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_custom2"
                android:text="@string/re"
                android:textColor="#43b3e6" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

