<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43b3e6"
    android:orientation="vertical"
    tools:context=".alm">


    <TextView
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_there"
        android:layout_marginTop="160dp"
        android:textSize="38sp"
        android:layout_gravity="center|center_vertical" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/thank_you_registering_with_one_more_step_you_need_to_check_your_email_to_active_your_account"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:typeface="normal" />


    <Button
        android:id="@+id/btn_verify"
        android:layout_width="369dp"
        android:layout_height="63dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_custom"
        android:text="@string/verify"
        android:textColor="#FFFFFF" />


</LinearLayout>